-----------------------------------------------------------------------------------------
        Contains changes made to the data files under dcw-gmt/orig etc
-----------------------------------------------------------------------------------------

2023-05-30	esteban82
		Restore HK and MO as countries. Issues #93 and #94.

2022-07-12	anbj
		Add counties of mainland Norway (NO).

2022-05-20	pwessel
		New 2.1.1 released.

2022-04-06	esteban82
		Add four continental sectors in dcw-collections. Issue #74

2022-03-18	esteban82
		Issue #73. Delete HK and add TW in dcw-countries.

2022-01-25	esteban82
		Fix bug in MX. Issue #66.

2022-01-18	pwessel
		Fix spelling of Barents Sea

2022-01-16	pwessel
		New 2.1.0 released.

2022-01-15	esteban82
		Delete MO and TW as countries. Issue #55.

2022-01-07	esteban82
		Finalize new dcw-collections.txt with 244 named regions, seas, etc.

2021-12-23	esteban82
		Reformat original files using consistent format and white-space.

2021-12-16	pwessel
		Fix bug. Move Borkum island from NL to DE. Issue #46.

2021-12-15	pwessel
		New 2.0.2 tar/zip files placed on server.

2021-12-14	pwessel
		Fix bugs in Chukotka and Fiji. Issue #40.

2021-12-14	esteban82
		Fix bug in Russia (RU.txt). Two polygon that go trough 180 were joint. Issue #40.

2021-12-07	esteban82
		Add Novaya Zembla and Franz Josef Land in RU.txt. Fix Vaygach Island also
		in RU.txt.

2021-11-19	pwessel
		New 2.0.1 tar/zip files placed on server.

2021-09-12      esteban82
	        New 2.0.1. Fix some names (North Macedonia, Eswatini, Cabo Verde,
		Brunei Darussalam, Northern Mariana Islands, Wallis and Futuna,
		Antigua and Barbuda, Falkland (Malvinas), Suriname, Trinidad and Tobago).
		Fix poligons of NO and SJ (Svalbard and Jan Mayen).
		Add polygon holes for New South Wales (Australia), Krasnodar Krai (Russia)
		and Moscow Krai. Update data of Argentina and its provinces with dara from
		the Instituto Geografico Nacional (IGN). Fix bug in Paraíba state (Brazil).
