@@ -3,13 +3,13 @@
 #
 # These are the default settings.  You can override them by supplying your
 # own config.mk file which will take precedence.
-# Paul Wessel, May 2020
+# Paul Wessel, July 2023
 
 # Minimum required GMT version
 GMT_VERSION	= 6.1.1
 # DCW data version to be released
-DCW_VERSION	= 2.2.0
-DCW_DATE	= 2022-MAY-20
+DCW_VERSION	= 2.1.2
+DCW_DATE	= 2023-JUL-21
 # Tarball placement for releases
 DCW_FTPSITE	= ftp.soest.hawaii.edu:/export/ftp1/ftp/pub/dcw
 GMT_FTPSITE	= ftp.soest.hawaii.edu:/export/ftp1/ftp/pub/gmt
