@@ -4,7 +4,7 @@
 <h2>DCW-GMT - The Digital Chart of the World for GMT 6 or later</h2></center>
 <HR><P>
 <center><img src="dcw-figure.png"><p>
-<h3>Version 2.1.1 Released May 20, 2022</h3>
+<h3>Version 2.1.2 Released July 21, 2023</h3>
 <P>DCW-GMT is developed and maintained by<p>
 Paul Wessel, SOEST, University of Hawai'i, Honolulu, HI, USA.<br>
 Federico Esteban, Consejo Nacional de Investigaciones Científicas y Técnicas: Buenos Aires, Argentina.<br>
@@ -41,12 +41,12 @@ Notes:
 The latest data files are available below; details on the changes are described in the <a href="ChangeLog.txt">ChangeLog</a>.
 For GMT versions 6.1.1 or later, you may download one of these files via ftp or http:
 <OL>
-	<LI><b>FTP:</b> <a href="ftp://ftp.soest.hawaii.edu/dcw/dcw-gmt-2.1.1.tar.gz"> DCW-GMT polygons for GMT in netCDF 4 format (gzipped tar archive).</a></LI>
-	<LI><b>FTP:</b> <a href="ftp://ftp.soest.hawaii.edu/dcw/dcw-gmt-2.1.1.zip"> DCW-GMT polygons for GMT in netCDF 4 format (zip archive).</a></LI>
-	<LI><b>HTTP:</b> <a href="http://www.soest.hawaii.edu/pwessel/dcw/dcw-gmt-2.1.1.tar.gz"> DCW-GMT polygons for GMT in netCDF 4 format (gzipped tar archive).</a></LI>
-	<LI><b>HTTP:</b> <a href="http://www.soest.hawaii.edu/pwessel/dcw/dcw-gmt-2.1.1.zip"> DCW-GMT polygons for GMT in netCDF 4 format (zip archive).</a></LI>
+	<LI><b>FTP:</b> <a href="ftp://ftp.soest.hawaii.edu/dcw/dcw-gmt-2.1.2.tar.gz"> DCW-GMT polygons for GMT in netCDF 4 format (gzipped tar archive).</a></LI>
+	<LI><b>FTP:</b> <a href="ftp://ftp.soest.hawaii.edu/dcw/dcw-gmt-2.1.2.zip"> DCW-GMT polygons for GMT in netCDF 4 format (zip archive).</a></LI>
+	<LI><b>HTTP:</b> <a href="http://www.soest.hawaii.edu/pwessel/dcw/dcw-gmt-2.1.2.tar.gz"> DCW-GMT polygons for GMT in netCDF 4 format (gzipped tar archive).</a></LI>
+	<LI><b>HTTP:</b> <a href="http://www.soest.hawaii.edu/pwessel/dcw/dcw-gmt-2.1.2.zip"> DCW-GMT polygons for GMT in netCDF 4 format (zip archive).</a></LI>
 </OL>
 <BR>
 <HR>
-<I>Last update May 20, 2022 by Paul Wessel</I>
+<I>Last update July 21, 2023 by Paul Wessel</I>
 </HTML>
